@@ -289,7 +289,7 @@ include_HEADERS = rtai_comedi.h
 
 lib_LIBRARIES = libkcomedilxrt.a
 libkcomedilxrt_a_CFLAGS = \
-	@RTAI_USER_CFLAGS@ \
+	@RTAI_REAL_USER_CFLAGS@ \
 	-DCONFIG_RTAI_LXRT_INLINE=0 \
 	-D_GNU_SOURCE -D_REENTRANT \
 	-I$(top_srcdir)/base/include \
